--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -154,7 +154,7 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
-											<a href="<%= builder.header.icon %>" target="_blank">
+											<a href="<%= builder.header.icon %>" target="_blank" rel="noopener noreferrer">
 												Ícone
 											</a>
 										</div>
@@ -186,7 +186,7 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
-											<a href="<%= builder.header.logo %>" target="_blank">
+											<a href="<%= builder.header.logo %>" target="_blank" rel="noopener noreferrer">
 												Logo
 											</a>
 										</div>
@@ -375,7 +375,7 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank">Imagem Grande</a>
+												<a target="_blank" rel="noopener noreferrer">Imagem Grande</a>
 											</div>
 											<div
 												cell-info
@@ -402,7 +402,7 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank">Imagem Pequena</a>
+												<a target="_blank" rel="noopener noreferrer">Imagem Pequena</a>
 											</div>
 											<div
 												cell-info
@@ -579,7 +579,7 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input product-image type="file" accept="image/*" />
-												<a target="_blank">Imagem</a>
+												<a target="_blank" rel="noopener noreferrer">Imagem</a>
 											</div>
 											<div
 												cell-info
