--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -1182,7 +1182,7 @@
 								rel="noopener noreferrer"
 							>
 								<i class="fa-solid fa-location-dot"></i>
-								Location
+								Localização
 							</a>
 						</div>
 						<p><%= builder.footer['complete-store-info'] %></p>
