--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -147,7 +147,7 @@
 					/>
 				</a>
 				<div search-container class="search-container">
-					<input type="text" placeholder="O que você procura?" />
+					<input type="text" placeholder="O que você está procurando?" />
 					<div>
 						<div search-results>
 							<template>
@@ -176,7 +176,7 @@
 					<i class="fa-solid fa-bars"></i>
 				</button>
 				<div search-container class="search-container">
-					<input type="text" placeholder="What are you looking for?" />
+					<input type="text" placeholder="O que você está procurando?" />
 					<div>
 						<div search-results>
 							<template>
