--- a/endpoints/rootEndpoint/views/root-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-page/index.ejs
@@ -99,7 +99,7 @@
 									</div>
 									<a product-link target="_blank">
 										<i class="fa-brands fa-whatsapp"></i>
-										Order Product
+										Pedir Produto
 									</a>
 								</div>
 							</div>
