--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -51,7 +51,9 @@
 		<script defer type="module" src="/admin-page/scripts/builder.js"></script>
 	</head>
 	<body>
-		<div warning class="warning-container">
+
+		<!--waning-->
+		<div multiple-windows-warning class="warning-container">
 			<div>
 				<h2>
 					<i class="fa-sharp fa-solid fa-circle-exclamation"></i>
@@ -66,6 +68,23 @@
 				</div>
 			</div>
 		</div>
+
+		<!--waning-->
+		<div confirm-category-deletion-warning class="warning-container">
+			<div>
+				<h2>
+					<i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+					Exclusão
+				</h2>
+				<p></p>
+				<div>
+					<button>Cancelar</button>
+					<button>Excluir</button>
+				</div>
+			</div>
+		</div>
+
+		<!--aside-->
 		<aside settings-aside-menu>
 			<button close-settings-aside-menu-button></button>
 			<div>
@@ -100,6 +119,8 @@
 				</div>
 			</div>
 		</aside>
+
+		<!--header-->
 		<header>
 			<div>
 				<a href="/">
@@ -120,7 +141,11 @@
 				</div>
 			</div>
 		</header>
+
+		<!--main-->
 		<main>
+
+			<!--table-->
 			<div header-table-section class="table-section-container">
 				<div>
 					<h1>
@@ -206,6 +231,8 @@
 						</tbody>
 					</table>
 				</div>
+
+				<!--table-->
 				<div table-container class="table-section-container__table-container">
 					<table>
 						<thead>
@@ -277,6 +304,8 @@
 						</tbody>
 					</table>
 				</div>
+
+				<!--table-->
 				<div table-container class="table-section-container__table-container">
 					<table>
 						<thead>
@@ -318,6 +347,8 @@
 					</table>
 				</div>
 			</div>
+
+			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -431,6 +462,8 @@
 					</button>
 				</div>
 			</div>
+
+			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -516,6 +549,8 @@
 					</button>
 				</div>
 			</div>
+
+			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -802,6 +837,8 @@
 					</button>
 				</div>
 			</div>
+
+			<!--table-->
 			<div header-table-section class="table-section-container">
 				<div>
 					<h1>
