--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -51,8 +51,6 @@
 		<script defer type="module" src="/admin-page/scripts/builder.js"></script>
 	</head>
 	<body>
-
-		<!--waning-->
 		<div multiple-windows-warning class="warning-container">
 			<div>
 				<h2>
@@ -68,8 +66,6 @@
 				</div>
 			</div>
 		</div>
-
-		<!--waning-->
 		<div confirm-category-deletion-warning class="warning-container">
 			<div>
 				<h2>
@@ -83,8 +79,6 @@
 				</div>
 			</div>
 		</div>
-
-		<!--aside-->
 		<aside settings-aside-menu>
 			<button close-settings-aside-menu-button></button>
 			<div>
@@ -119,8 +113,6 @@
 				</div>
 			</div>
 		</aside>
-
-		<!--header-->
 		<header>
 			<div>
 				<a href="/">
@@ -141,11 +133,7 @@
 				</div>
 			</div>
 		</header>
-
-		<!--main-->
 		<main>
-
-			<!--table-->
 			<div header-table-section class="table-section-container">
 				<div>
 					<h1>
@@ -179,7 +167,11 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
-											<a href="<%= builder.header.icon %>" target="_blank" rel="noopener noreferrer">
+											<a
+												href="<%= builder.header.icon %>"
+												target="_blank"
+												rel="noopener noreferrer"
+											>
 												Ícone
 											</a>
 										</div>
@@ -211,7 +203,11 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
-											<a href="<%= builder.header.logo %>" target="_blank" rel="noopener noreferrer">
+											<a
+												href="<%= builder.header.logo %>"
+												target="_blank"
+												rel="noopener noreferrer"
+											>
 												Logo
 											</a>
 										</div>
@@ -231,8 +227,6 @@
 						</tbody>
 					</table>
 				</div>
-
-				<!--table-->
 				<div table-container class="table-section-container__table-container">
 					<table>
 						<thead>
@@ -304,8 +298,6 @@
 						</tbody>
 					</table>
 				</div>
-
-				<!--table-->
 				<div table-container class="table-section-container__table-container">
 					<table>
 						<thead>
@@ -347,8 +339,6 @@
 					</table>
 				</div>
 			</div>
-
-			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -406,7 +396,9 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">Imagem Grande</a>
+												<a target="_blank" rel="noopener noreferrer">
+													Imagem Grande
+												</a>
 											</div>
 											<div
 												cell-info
@@ -433,7 +425,9 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">Imagem Pequena</a>
+												<a target="_blank" rel="noopener noreferrer">
+													Imagem Pequena
+												</a>
 											</div>
 											<div
 												cell-info
@@ -462,8 +456,6 @@
 					</button>
 				</div>
 			</div>
-
-			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -549,8 +541,6 @@
 					</button>
 				</div>
 			</div>
-
-			<!--table-->
 			<div special-section class="table-section-container">
 				<div>
 					<h1>
@@ -837,8 +827,6 @@
 					</button>
 				</div>
 			</div>
-
-			<!--table-->
 			<div header-table-section class="table-section-container">
 				<div>
 					<h1>
