--- a/endpoints/adminEndpoint/views/admin-error-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-error-page/index.ejs
@@ -192,9 +192,12 @@
 		</style>
 
 		<!--fonts-->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+			rel="stylesheet"
+		/>
 
 		<!--font-awesome-->
 		<link
