--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -167,11 +167,7 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
-											<a
-												href="<%= builder.header.icon %>"
-												target="_blank"
-												rel="noopener noreferrer"
-											>
+											<a href="<%= builder.header.icon %>" target="_blank" rel="noopener noreferrer">
 												Ícone
 											</a>
 										</div>
@@ -203,11 +199,7 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
-											<a
-												href="<%= builder.header.logo %>"
-												target="_blank"
-												rel="noopener noreferrer"
-											>
+											<a href="<%= builder.header.logo %>" target="_blank" rel="noopener noreferrer">
 												Logo
 											</a>
 										</div>
@@ -396,9 +388,7 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">
-													Imagem Grande
-												</a>
+												<a target="_blank" rel="noopener noreferrer">Imagem Grande</a>
 											</div>
 											<div
 												cell-info
@@ -425,9 +415,7 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">
-													Imagem Pequena
-												</a>
+												<a target="_blank" rel="noopener noreferrer">Imagem Pequena</a>
 											</div>
 											<div
 												cell-info
