--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -48,7 +48,6 @@
 
 		<!--scripts-->
 		<script defer type="module" src="/admin-page/scripts/index.js"></script>
-		<script defer type="module" src="/admin-page/scripts/builder.js"></script>
 	</head>
 	<body>
 		<div multiple-windows-warning class="warning-container">
@@ -167,7 +166,11 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
-											<a href="<%= builder.header.icon %>" target="_blank" rel="noopener noreferrer">
+											<a
+												href="<%= builder.header.icon %>"
+												target="_blank"
+												rel="noopener noreferrer"
+											>
 												Ícone
 											</a>
 										</div>
@@ -199,7 +202,11 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
-											<a href="<%= builder.header.logo %>" target="_blank" rel="noopener noreferrer">
+											<a
+												href="<%= builder.header.logo %>"
+												target="_blank"
+												rel="noopener noreferrer"
+											>
 												Logo
 											</a>
 										</div>
@@ -388,7 +395,9 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">Imagem Grande</a>
+												<a target="_blank" rel="noopener noreferrer">
+													Imagem Grande
+												</a>
 											</div>
 											<div
 												cell-info
@@ -415,7 +424,9 @@
 													<i class="fa-solid fa-image"></i>
 												</label>
 												<input type="file" accept="image/*" />
-												<a target="_blank" rel="noopener noreferrer">Imagem Pequena</a>
+												<a target="_blank" rel="noopener noreferrer">
+													Imagem Pequena
+												</a>
 											</div>
 											<div
 												cell-info
